tests/errors/semantic/non_blocking/UNKNOWN_IMPORT.py
# Function 'invented_func' from module 'numpy' is not currently supported by pyccel
# pylint: disable=missing-function-docstring, missing-module-docstring, unused-import
from numpy import invented_func
